lldb/source/Core/DILParser.cpp
//===-- DILParser.cpp -----------------------------------------------------===//
//
// Part of the LLVM Project, under the Apache License v2.0 with LLVM Exceptions.
// See https://llvm.org/LICENSE.txt for license information.
// SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception
//
// This implements the recursive descent parser for the Data Inspection
// Language (DIL), and its helper functions, which will eventually underlie the
// 'frame variable' command. The language that this parser recognizes is
// described in lldb/docs/dil-expr-lang.ebnf
//
//===----------------------------------------------------------------------===//

#include "lldb/Core/DILParser.h"

#include <stdlib.h>

#include <cstdint>
#include <memory>
#include <optional>
#include <sstream>
#include <string>
#include <tuple>
#include <type_traits>
#include <vector>

#include "clang/Basic/Diagnostic.h"
#include "clang/Basic/LangOptions.h"
#include "clang/Basic/SourceLocation.h"
#include "clang/Basic/SourceManager.h"
#include "clang/Basic/TargetInfo.h"
#include "clang/Basic/TargetOptions.h"
#include "clang/Basic/TokenKinds.h"
#include "clang/Lex/HeaderSearch.h"
#include "clang/Lex/HeaderSearchOptions.h"
#include "clang/Lex/LiteralSupport.h"
#include "clang/Lex/ModuleLoader.h"
#include "clang/Lex/Preprocessor.h"
#include "clang/Lex/PreprocessorOptions.h"
#include "clang/Lex/Token.h"
#include "lldb/lldb-enumerations.h"
#include "lldb/Core/DILAST.h"
#include "lldb/Target/ExecutionContextScope.h"
#include "llvm/ADT/StringRef.h"
#include "llvm/ADT/iterator_range.h"
#include "llvm/Support/FormatAdapters.h"
#include "llvm/Support/FormatVariadic.h"
#include "llvm/TargetParser/Host.h"

namespace {

const char* kInvalidOperandsToUnaryExpression =
    "invalid argument type {0} to unary expression";

const char* kInvalidOperandsToBinaryExpression =
    "invalid operands to binary expression ({0} and {1})";

const char* kValueIsNotConvertibleToBool =
    "value of type {0} is not contextually convertible to 'bool'";

template <typename T>
constexpr unsigned type_width() {
  return static_cast<unsigned>(sizeof(T)) * CHAR_BIT;
}

inline void TokenKindsJoinImpl(std::ostringstream& os,
                               clang::tok::TokenKind k) {
  os << "'" << clang::tok::getTokenName(k) << "'";
}

template <typename... Ts>
inline void TokenKindsJoinImpl(std::ostringstream& os, clang::tok::TokenKind k,
                               Ts... ks) {
  TokenKindsJoinImpl(os, k);
  os << ", ";
  TokenKindsJoinImpl(os, ks...);
}

template <typename... Ts>
inline std::string TokenKindsJoin(clang::tok::TokenKind k, Ts... ks) {
  std::ostringstream os;
  TokenKindsJoinImpl(os, k, ks...);

  return os.str();
}

}  // namespace

namespace lldb_private {

static CompilerType GetBasicType(std::shared_ptr<ExecutionContextScope> ctx,
                                 lldb::BasicType basic_type) {
  static std::unordered_map<lldb::BasicType, CompilerType> basic_types;
  auto type = basic_types.find(basic_type);
  if (type != basic_types.end()) {
    std::string type_name((type->second).GetTypeName().AsCString());
    // Only return the found type if it's valid.
    if (type_name != "<invalid>")
      return type->second;
  }

  lldb::TargetSP target_sp = ctx->CalculateTarget();
  if (target_sp) {
    for (auto type_system_sp : target_sp->GetScratchTypeSystems())
      if (auto compiler_type = type_system_sp->GetBasicTypeFromAST(basic_type)){
        basic_types.insert({basic_type, compiler_type});
        return compiler_type;
      }
  }
  CompilerType empty_type;
  return empty_type;
}

static lldb::BasicType GetPtrDiffType(std::shared_ptr<ExecutionContextScope> ctx)
{
  lldb::TargetSP target_sp = ctx->CalculateTarget();
  llvm::Triple triple(
      llvm::Twine(target_sp->GetArchitecture().GetTriple().str()));

  if (triple.isOSWindows()) {
    return triple.isArch64Bit() ? lldb::eBasicTypeLongLong
                                : lldb::eBasicTypeInt;
  } else {
    return triple.isArch64Bit() ? lldb::eBasicTypeLong : lldb::eBasicTypeInt;
  }
}

static std::unique_ptr<BuiltinFunctionDef> GetBuiltinFunctionDef(
    std::shared_ptr<ExecutionContextScope> ctx, const std::string& identifier) {
  //
  // __log2(unsigned int x) -> unsigned int
  //
  //   Calculates the log2(x).
  //
  if (identifier == "__log2") {
    CompilerType return_type = GetBasicType(ctx, lldb::eBasicTypeUnsignedInt);
    std::vector<CompilerType> arguments = {
      GetBasicType(ctx, lldb::eBasicTypeUnsignedInt),
    };
    return std::make_unique<BuiltinFunctionDef>(identifier, return_type,
                                                std::move(arguments));
  }
  //
  // __findnonnull(T* ptr, long long buffer_size) -> int
  //
  //   Finds the first non-null object pointed by `ptr`. `ptr` is treated as an
  //   array of pointers of size `buffer_size`.
  //
  if (identifier == "__findnonnull") {
    auto return_type = GetBasicType(ctx, lldb::eBasicTypeInt);
    std::vector<CompilerType> arguments = {
        // The first argument should actually be "T*", but we don't support
        // templates here.
        // HACK: Void means "any" and we'll check in runtime. The argument will
        // be passed as is without any conversions.
      GetBasicType(ctx, lldb::eBasicTypeVoid),
      GetBasicType(ctx,lldb::eBasicTypeLongLong),
    };
    return std::make_unique<BuiltinFunctionDef>(identifier, return_type,
                                                std::move(arguments));
  }
  // Not a builtin function.
  return nullptr;
}

static bool GetPathToBaseType(CompilerType type, CompilerType target_base,
                              std::vector<uint32_t>* path,
                              uint64_t* offset) {
  if (type.CompareTypes(target_base)) {
    return true;
  }

  uint32_t bit_offset = 0;
  uint32_t num_non_empty_bases = 0;
  uint32_t num_direct_bases =
      type.GetNumDirectBaseClasses();
  for (uint32_t i = 0; i < num_direct_bases; ++i) {
    auto member_base_type =
        type.GetDirectBaseClassAtIndex(i, &bit_offset);
    if (GetPathToBaseType(member_base_type, target_base, path, offset)) {
      if (path) {
        path->push_back(num_non_empty_bases);
      }
      if (offset) {
        *offset += bit_offset / 8u;
      }
      return true;
    }
    if (member_base_type.GetNumFields() > 0) {
      num_non_empty_bases++;
    }
  }

  return false;
}


DILMemberInfo GetFieldWithNameIndexPathOld(lldb::ValueObjectSP lhs_val_sp,
                                           CompilerType type,
                                           const std::string& name,
                                           std::vector<uint32_t>* idx,
                                           CompilerType empty_type,
                                           bool use_synthetic,
                                           bool is_dynamic) {
  bool is_synthetic = false;
  // Go through the fields first.
  uint32_t num_fields = type.GetNumFields();
  lldb::ValueObjectSP empty_valobj_sp;
  for (uint32_t i = 0; i < num_fields; ++i) {
    uint64_t bit_offset = 0;
    uint32_t bitfield_bit_size = 0;
    bool is_bitfield = false;
    std::string name_sstr;
    CompilerType field_type (
        type.GetFieldAtIndex(
            i, name_sstr, &bit_offset, &bitfield_bit_size, &is_bitfield));
    auto field_name = name_sstr.length() == 0 ? std::optional<std::string>()
                                              : name_sstr;
    if (field_type.IsValid()) {
      struct DILMemberInfo field = {field_name, field_type, is_bitfield,
        bitfield_bit_size, is_synthetic, is_dynamic, empty_valobj_sp};

      // Name can be null if this is a padding field.
      if (field.name == name) {
        if (lhs_val_sp) {
          lldb::ValueObjectSP child_valobj_sp =
              lhs_val_sp->GetChildMemberWithName(name);
          if (child_valobj_sp)
            field.val_obj_sp = child_valobj_sp;
        }

        if (idx) {
          assert(idx->empty());
          // Direct base classes are located before fields, so field members
          // needs to be offset by the number of base classes.
          idx->push_back(i + type.GetNumberOfNonEmptyBaseClasses());
        }
        return field;
      } else if (field.type.IsAnonymousType()) {
        // Every member of an anonymous struct is considered to be a member of
        // the enclosing struct or union. This applies recursively if the
        // enclosing struct or union is also anonymous.
        //
        //  struct S {
        //    struct {
        //      int x;
        //    };
        //  } s;
        //
        //  s.x = 1;

        assert(!field.name && "Field should be unnamed.");

        auto field_in_anon_type =
            GetFieldWithNameIndexPath(lhs_val_sp, field.type, name, idx,
                                      empty_type, use_synthetic, is_dynamic);
        if (field_in_anon_type) {
          if (idx) {
            idx->push_back(i + type.GetNumberOfNonEmptyBaseClasses());
          }
          return field_in_anon_type;
        }
      }
    }
  }

  // LLDB can't access inherited fields of anonymous struct members.
  if (type.IsAnonymousType()) {
    return {{}, empty_type, false, 0, false, false, empty_valobj_sp};
  }

  // Go through the base classes and look for the field there.
  uint32_t num_non_empty_bases = 0;
  uint32_t num_direct_bases = type.GetNumDirectBaseClasses();
  for (uint32_t i = 0; i < num_direct_bases; ++i) {
    uint32_t bit_offset;
    auto base = type.GetDirectBaseClassAtIndex(i, &bit_offset);
    auto field = GetFieldWithNameIndexPath(lhs_val_sp, base, name, idx,
                                           empty_type, use_synthetic,
                                           is_dynamic);
    if (field) {
      if (idx) {
        idx->push_back(num_non_empty_bases);
      }
      return field;
    }
    if (base.GetNumFields() > 0) {
      num_non_empty_bases += 1;
    }
  }

  // Check for synthetic member
  if (lhs_val_sp && use_synthetic) {
    lldb::ValueObjectSP child_valobj_sp = lhs_val_sp->GetSyntheticValue();
    if (child_valobj_sp) {
      is_synthetic = true;
      uint32_t child_idx = child_valobj_sp->GetIndexOfChildWithName(name);
      child_valobj_sp = child_valobj_sp->GetChildMemberWithName(name);
      if (child_valobj_sp) {
        CompilerType field_type = child_valobj_sp->GetCompilerType();
        if (field_type.IsValid()) {
          struct DILMemberInfo field = {name, field_type, false, 0,
            is_synthetic, is_dynamic, child_valobj_sp};
          if (idx) {
            assert(idx->empty());
            idx->push_back(child_idx);
          }
          return field;
        }
      }
    }
  }

  if (lhs_val_sp) {
    lldb::ValueObjectSP dynamic_val_sp
        = lhs_val_sp->GetDynamicValue(lldb::eDynamicDontRunTarget);
    if (dynamic_val_sp) {
      CompilerType lhs_type = dynamic_val_sp->GetCompilerType();
      if (lhs_type.IsPointerType())
        lhs_type = lhs_type.GetPointeeType();
      is_dynamic = true;
      return GetFieldWithNameIndexPath(dynamic_val_sp, lhs_type,
                                       name, idx, empty_type, use_synthetic,
                                       is_dynamic);
    }
  }

  return {{}, empty_type, false, 0, false, false, empty_valobj_sp};
}

DILMemberInfo GetFieldWithNameIndexPath(lldb::ValueObjectSP lhs_val_sp,
                                        CompilerType type,
                                        const std::string& name,
                                        std::vector<uint32_t>* idx,
                                        CompilerType empty_type,
                                        bool use_synthetic,
                                        bool is_dynamic) {
  lldb::ValueObjectSP child_valobj_sp;
  ConstString child_name(name);
  bool is_synthetic = false;
  uint32_t child_idx;

  if (lhs_val_sp && false) {
    child_valobj_sp = lhs_val_sp->GetChildMemberWithName(child_name);
    if (!child_valobj_sp && use_synthetic) {
      child_valobj_sp = lhs_val_sp->GetSyntheticValue();
      if (child_valobj_sp) {
        child_valobj_sp = child_valobj_sp->GetChildMemberWithName(child_name);
        is_synthetic = true;
        child_idx = child_valobj_sp->GetIndexOfChildWithName(name);
      }
    } else {
      child_idx = lhs_val_sp->GetIndexOfChildWithName(name);
    }

    if (child_valobj_sp) {
      CompilerType field_type = child_valobj_sp->GetCompilerType();
      is_synthetic = true;
      if (field_type.IsValid()) {
        struct DILMemberInfo field = {name, field_type, false, 0,
          is_synthetic, is_dynamic, child_valobj_sp};
        // Name can be null if this is a padding field.
        if (field.name == name) {
          if (idx) {
            assert(idx->empty());
            // Direct base classes are located before fields, so field members
            // needs to be offset by the number of base classes.
            idx->push_back(child_idx);
          }
        }
        return field;
      }
    }
  }

  return GetFieldWithNameIndexPathOld(lhs_val_sp, type, name, idx,
                                      empty_type, use_synthetic,
                                      is_dynamic);
}

std::tuple<DILMemberInfo, std::vector<uint32_t>> GetMemberInfo (
    lldb::ValueObjectSP lhs_val_sp,
    CompilerType type,
    const std::string& name,
    bool use_synthetic) {
  std::vector<uint32_t> idx;
  CompilerType empty_type;
  bool is_dynamic = false;
  DILMemberInfo member =
      GetFieldWithNameIndexPath(lhs_val_sp, type, name, &idx, empty_type,
                                use_synthetic, is_dynamic);
  std::reverse(idx.begin(), idx.end());
  return {member, std::move(idx)};
}


DILSourceManager::DILSourceManager(std::string expr) : m_expr(std::move(expr))
{
  // This holds a DILSourceManager and all of its dependencies.
  m_smff = std::make_unique<clang::SourceManagerForFile>("<expr>", m_expr);

  // Disable default diagnostics reporting.
  // TODO: Add custom consumer to keep track of errors.
  clang::DiagnosticsEngine& de = m_smff->get().getDiagnostics();
  de.setClient(new clang::IgnoringDiagConsumer);
}

std::shared_ptr<DILSourceManager> DILSourceManager::Create(std::string expr) {
  return std::shared_ptr<DILSourceManager>(new DILSourceManager(
      std::move(expr)));
};

static const char* ToString(TypeDeclaration::TypeSpecifier type_spec) {
  using TypeSpecifier = TypeDeclaration::TypeSpecifier;
  switch (type_spec) {
      // clang-format off
    case TypeSpecifier::kVoid:       return "void";
    case TypeSpecifier::kBool:       return "bool";
    case TypeSpecifier::kChar:       return "char";
    case TypeSpecifier::kShort:      return "short";
    case TypeSpecifier::kInt:        return "int";
    case TypeSpecifier::kLong:       return "long";
    case TypeSpecifier::kLongLong:   return "long long";
    case TypeSpecifier::kFloat:      return "float";
    case TypeSpecifier::kDouble:     return "double";
    case TypeSpecifier::kLongDouble: return "long double";
    case TypeSpecifier::kWChar:      return "wchar_t";
    case TypeSpecifier::kChar16:     return "char16_t";
    case TypeSpecifier::kChar32:     return "char32_t";
      // clang-format on
    default:
      assert(false && "invalid type specifier");
      return nullptr;
  }
}

static const char* ToString(TypeDeclaration::SignSpecifier sign_spec) {
  using SignSpecifier = TypeDeclaration::SignSpecifier;
  switch (sign_spec) {
      // clang-format off
    case SignSpecifier::kSigned:   return "signed";
    case SignSpecifier::kUnsigned: return "unsigned";
      // clang-format on
    default:
      assert(false && "invalid sign specifier");
      return nullptr;
  }
}

static CompilerType GetTemplateArgumentType(uint32_t idx,
                                            CompilerType this_type)
{
  CompilerType bad_type;
  if (!this_type.IsValid())
    return bad_type;

  CompilerType type;
  const bool expand_pack = true;
  switch(this_type.GetTemplateArgumentKind(idx, true)) {
    case lldb::eTemplateArgumentKindType:
      type = this_type.GetTypeTemplateArgument(idx, expand_pack);
      break;
    case lldb::eTemplateArgumentKindIntegral:
      type = this_type.GetIntegralTemplateArgument(idx, expand_pack)->type;
      break;
    default:
      break;
  }
  if (type.IsValid())
    return type;
  return bad_type;
}

static CompilerType GetSmartPtrPointeeType(CompilerType type) {
  assert(
      IsSmartPtrType(type) &&
      "the type should be a smart pointer (std::unique_ptr, std::shared_ptr "
      "or std::weak_ptr");

  return GetTemplateArgumentType(0, type);
}

bool IsSmartPtrType(CompilerType type) {

  // libc++ smart pointers
  static const llvm::Regex k_libcxx_std_unique_ptr_regex(
      "^std::__[[:alnum:]]+::unique_ptr<.+>(( )?&)?$");
  static const llvm::Regex k_libcxx_std_shared_ptr_regex(
      "^std::__[[:alnum:]]+::shared_ptr<.+>(( )?&)?$");
  static const llvm::Regex k_libcxx_std_weak_ptr_regex(
      "^std::__[[:alnum:]]+::weak_ptr<.+>(( )?&)?$");

  // libstdc++ smart pointers
  static const llvm::Regex k_libstdcxx_std_unique_ptr_regex(
      "^std::unique_ptr<.+>(( )?&)?$");
  static const llvm::Regex k_libstdcxx_std_shared_ptr_regex(
      "^std::shared_ptr<.+>(( )?&)?$");
  static const llvm::Regex k_libstdcxx_std_weak_ptr_regex(
      "^std::weak_ptr<.+>(( )?&)?$");

  llvm::StringRef name = type.GetTypeName();
  return k_libcxx_std_unique_ptr_regex.match(name) ||
         k_libcxx_std_shared_ptr_regex.match(name) ||
         k_libcxx_std_weak_ptr_regex.match(name) ||
         k_libstdcxx_std_unique_ptr_regex.match(name) ||
         k_libstdcxx_std_shared_ptr_regex.match(name) ||
         k_libstdcxx_std_weak_ptr_regex.match(name);
}

static bool TokenEndsTemplateArgumentList(const clang::Token& token) {
  // Note: in C++11 ">>" can be treated as "> >" and thus be a valid token
  // for the template argument list.
  return token.isOneOf(clang::tok::comma, clang::tok::greater,
                       clang::tok::greatergreater);
}

static ParseResult InsertSmartPtrToPointerConversion(ParseResult expr) {
  auto expr_type = expr->result_type_deref();

  assert(
      IsSmartPtrType(expr_type) &&
      "an argument to smart-ptr-to-pointer conversion must be a smart pointer");
  return std::make_unique<SmartPtrToPtrDecay>(
      expr->location(), GetSmartPtrPointeeType(expr_type).GetPointerType(),
      std::move(expr));
}

static ParseResult InsertArrayToPointerConversion(ParseResult expr) {
  assert(expr->result_type_deref().IsArrayType() &&
         "an argument to array-to-pointer conversion must be an array");

  // TODO: Make this an explicit array-to-pointer conversion instead of
  // using a "generic" CStyleCastNode.
  return std::make_unique<CStyleCastNode>(
      expr->location(),
      expr->result_type_deref().GetArrayElementType(nullptr).GetPointerType(),
      std::move(expr), CStyleCastKind::kPointer);
}

static CompilerType DoIntegralPromotion(
    std::shared_ptr<ExecutionContextScope> ctx, CompilerType from) {
  assert((from.IsInteger() || from.IsUnscopedEnumerationType()) &&
         "Integral promotion works only for integers and unscoped enums.");

  // Don't do anything if the type doesn't need to be promoted.
  if (!from.IsPromotableIntegerType()) {
    return from;
  }

  if (from.IsUnscopedEnumerationType()) {
    // Get the enumeration underlying type and promote it.
    return DoIntegralPromotion(ctx, from.GetEnumerationIntegerType());
  }

  // At this point the type should an integer.
  assert(from.IsInteger() && "invalid type: must be an integer");

  // Get the underlying builtin representation.
  lldb::BasicType builtin_type =
      from.GetCanonicalType().GetBasicTypeEnumeration();

  uint64_t from_size = 0;
  if (builtin_type == lldb::eBasicTypeWChar ||
      builtin_type == lldb::eBasicTypeSignedWChar ||
      builtin_type == lldb::eBasicTypeUnsignedWChar ||
      builtin_type == lldb::eBasicTypeChar16 ||
      builtin_type == lldb::eBasicTypeChar32) {
    // Find the type that can hold the entire range of values for our type.
    bool is_signed = from.IsSigned();
    if (auto temp = from.GetByteSize(ctx.get()))
      from_size = temp.value();

    CompilerType promote_types[] = {
      GetBasicType(ctx, lldb::eBasicTypeInt),
      GetBasicType(ctx, lldb::eBasicTypeUnsignedInt),
      GetBasicType(ctx, lldb::eBasicTypeLong),
      GetBasicType(ctx, lldb::eBasicTypeUnsignedLong),
      GetBasicType(ctx, lldb::eBasicTypeLongLong),
      GetBasicType(ctx, lldb::eBasicTypeUnsignedLongLong),
    };
    for (auto& type : promote_types) {
      uint64_t byte_size = 0;
      if (auto temp = type.GetByteSize(ctx.get()))
        byte_size = temp.value();
      if (from_size < byte_size ||
          (from_size == byte_size &&
           is_signed ==(bool)(
               type.GetTypeInfo() & lldb::eTypeIsSigned)))
      {
        return type;
      }
    }

    llvm_unreachable("char type should fit into long long");
  }

  // Here we can promote only to "int" or "unsigned int".
  CompilerType int_type = GetBasicType(ctx, lldb::eBasicTypeInt);
  uint64_t int_byte_size = 0;
  if (auto temp = int_type.GetByteSize(ctx.get()))
    int_byte_size = temp.value();

  // Signed integer types can be safely promoted to "int".
  if (from.IsSigned()) {
    return int_type;
  }
  // Unsigned integer types are promoted to "unsigned int" if "int" cannot hold
  // their entire value range.
  return (from_size == int_byte_size)
      ? GetBasicType(ctx, lldb::eBasicTypeUnsignedInt)
      : int_type;
}

static ParseResult UsualUnaryConversions(
    std::shared_ptr<ExecutionContextScope>  ctx, ParseResult expr) {
  // Perform usual conversions for unary operators. At the moment this includes
  // array-to-pointer and the integral promotion for eligible types.
  auto result_type = expr->result_type_deref();

  if (expr->is_bitfield()) {
    // Promote bitfields. If `int` can represent the bitfield value, it is
    // converted to `int`. Otherwise, if `unsigned int` can represent it, it
    // is converted to `unsigned int`. Otherwise, it is treated as its
    // underlying type.

    uint32_t bitfield_size = expr->bitfield_size();
    // Some bitfields have undefined size (e.g. result of ternary operation).
    // The AST's `bitfield_size` of those is 0, and no promotion takes place.
    if (bitfield_size > 0 && result_type.IsInteger()) {
      auto int_type = GetBasicType(ctx, lldb::eBasicTypeInt);
      auto uint_type = GetBasicType(ctx, lldb::eBasicTypeUnsignedInt);
      uint64_t int_byte_size = 0;
      uint64_t uint_byte_size = 0;
      if (auto temp = int_type.GetByteSize(ctx.get()))
        int_byte_size = temp.value();
      if (auto temp = uint_type.GetByteSize(ctx.get()))
        uint_byte_size = temp.value();
      uint32_t int_bit_size = int_byte_size * CHAR_BIT;
      if (bitfield_size < int_bit_size ||
          (result_type.IsSigned() && bitfield_size == int_bit_size)) {
        expr = std::make_unique<CStyleCastNode>(expr->location(), int_type,
                                                std::move(expr),
                                                CStyleCastKind::kArithmetic);
      } else if (bitfield_size <= uint_byte_size * CHAR_BIT) {
        expr = std::make_unique<CStyleCastNode>(expr->location(), uint_type,
                                                std::move(expr),
                                                CStyleCastKind::kArithmetic);
      }
    }
  }

  if (result_type.IsArrayType()) {
    expr = InsertArrayToPointerConversion(std::move(expr));
  }

  if (result_type.IsInteger() || result_type.IsUnscopedEnumerationType()) {
    auto promoted_type = DoIntegralPromotion(ctx, result_type);

    // Insert a cast if the type promotion is happening.
    // TODO: Make this an implicit static_cast.
    if (!promoted_type.CompareTypes(result_type)) {
      expr = std::make_unique<CStyleCastNode>(expr->location(), promoted_type,
                                              std::move(expr),
                                              CStyleCastKind::kArithmetic);
    }
  }

  return expr;
}

static size_t ConversionRank(CompilerType type) {
  // Get integer conversion rank
  // https://eel.is/c++draft/conv.rank
  switch (type.GetCanonicalType().GetBasicTypeEnumeration()) {
    case lldb::eBasicTypeBool:
      return 1;
    case lldb::eBasicTypeChar:
    case lldb::eBasicTypeSignedChar:
    case lldb::eBasicTypeUnsignedChar:
      return 2;
    case lldb::eBasicTypeShort:
    case lldb::eBasicTypeUnsignedShort:
      return 3;
    case lldb::eBasicTypeInt:
    case lldb::eBasicTypeUnsignedInt:
      return 4;
    case lldb::eBasicTypeLong:
    case lldb::eBasicTypeUnsignedLong:
      return 5;
    case lldb::eBasicTypeLongLong:
    case lldb::eBasicTypeUnsignedLongLong:
      return 6;

      // TODO: The ranks of char16_t, char32_t, and wchar_t are equal to the
      // ranks of their underlying types.
    case lldb::eBasicTypeWChar:
    case lldb::eBasicTypeSignedWChar:
    case lldb::eBasicTypeUnsignedWChar:
      return 3;
    case lldb::eBasicTypeChar16:
      return 3;
    case lldb::eBasicTypeChar32:
      return 4;

    default:
      break;
  }
  return 0;
}

static lldb::BasicType BasicTypeToUnsigned(lldb::BasicType basic_type) {
  switch (basic_type) {
    case lldb::eBasicTypeInt:
      return lldb::eBasicTypeUnsignedInt;
    case lldb::eBasicTypeLong:
      return lldb::eBasicTypeUnsignedLong;
    case lldb::eBasicTypeLongLong:
      return lldb::eBasicTypeUnsignedLongLong;
    default:
      return basic_type;
  }
}

static void PerformIntegerConversions(std::shared_ptr<ExecutionContextScope> ctx,
                                      ParseResult& l,
                                      ParseResult& r, bool convert_lhs,
                                      bool convert_rhs) {
  // Assert that rank(l) < rank(r).
  auto l_type = l->result_type_deref();
  auto r_type = r->result_type_deref();

  // if `r` is signed and `l` is unsigned, check whether it can represent all
  // of the values of the type of the `l`. If not, then promote `r` to the
  // unsigned version of its type.
  if (r_type.IsSigned() && !l_type.IsSigned()) {
    uint64_t l_size = 0;
    uint64_t r_size = 0;
    if (auto temp = l_type.GetByteSize(ctx.get()))
      l_size = temp.value();;
    if (auto temp = r_type.GetByteSize(ctx.get()))
      r_size = temp.value();

    assert(l_size <= r_size && "left value must not be larger then the right!");

    if (r_size == l_size) {
      auto r_type_unsigned = GetBasicType(
          ctx,
          BasicTypeToUnsigned(r_type.GetCanonicalType()
                                  .GetBasicTypeEnumeration()));
      if (convert_rhs) {
        r = std::make_unique<CStyleCastNode>(r->location(), r_type_unsigned,
                                             std::move(r),
                                             CStyleCastKind::kArithmetic);
      }
    }
  }

  if (convert_lhs) {
    l = std::make_unique<CStyleCastNode>(l->location(), r->result_type(),
                                         std::move(l),
                                         CStyleCastKind::kArithmetic);
  }
}

static CompilerType UsualArithmeticConversions(
    std::shared_ptr<ExecutionContextScope> ctx,
    ParseResult& lhs,
    ParseResult& rhs,
    bool is_comp_assign = false) {
  // Apply unary conversions (e.g. intergal promotion) for both operands.
  // In case of a composite assignment operator LHS shouldn't get promoted.
  if (!is_comp_assign) {
    lhs = UsualUnaryConversions(ctx, std::move(lhs));
  }
  rhs = UsualUnaryConversions(ctx, std::move(rhs));

  auto lhs_type = lhs->result_type_deref();
  auto rhs_type = rhs->result_type_deref();

  if (lhs_type.CompareTypes(rhs_type)) {
    return lhs_type;
  }

  // If either of the operands is not arithmetic (e.g. pointer), we're done.
  if (!lhs_type.IsScalarType() || !rhs_type.IsScalarType()) {
    CompilerType bad_type;
    return bad_type;
  }

  // Handle conversions for floating types (float, double).
  if (lhs_type.IsFloat() || rhs_type.IsFloat()) {
    // If both are floats, convert the smaller operand to the bigger.
    if (lhs_type.IsFloat() && rhs_type.IsFloat()) {
      int order = lhs_type.GetBasicTypeEnumeration() -
                  rhs_type.GetBasicTypeEnumeration();
      if (order > 0) {
        rhs = std::make_unique<CStyleCastNode>(rhs->location(), lhs_type,
                                               std::move(rhs),
                                               CStyleCastKind::kArithmetic);
        return lhs_type;
      }
      assert(order < 0 && "illegal operands: must not be of the same type");
      if (!is_comp_assign) {
        lhs = std::make_unique<CStyleCastNode>(lhs->location(), rhs_type,
                                               std::move(lhs),
                                               CStyleCastKind::kArithmetic);
      }
      return rhs_type;
    }

    if (lhs_type.IsFloat()) {
      assert(rhs_type.IsInteger() && "illegal operand: must be an integer");
      rhs = std::make_unique<CStyleCastNode>(rhs->location(), lhs_type,
                                             std::move(rhs),
                                             CStyleCastKind::kArithmetic);
      return lhs_type;
    }
    assert(rhs_type.IsFloat() && "illegal operand: must be a float");
    if (!is_comp_assign) {
      lhs = std::make_unique<CStyleCastNode>(lhs->location(), rhs_type,
                                             std::move(lhs),
                                             CStyleCastKind::kArithmetic);
    }
    return rhs_type;
  }

  // Handle conversion for integer types.
  assert((lhs_type.IsInteger() && rhs_type.IsInteger()) &&
         "illegal operands: must be both integers");

  using Rank = std::tuple<size_t, bool>;
  Rank l_rank = {ConversionRank(lhs_type), !lhs_type.IsSigned()};
  Rank r_rank = {ConversionRank(rhs_type), !rhs_type.IsSigned()};

  if (l_rank < r_rank) {
    PerformIntegerConversions(ctx, lhs, rhs, !is_comp_assign, true);
  } else if (l_rank > r_rank) {
    PerformIntegerConversions(ctx, rhs, lhs, true, !is_comp_assign);
  }

  if (!is_comp_assign) {
    assert(lhs->result_type_deref().CompareTypes(rhs->result_type_deref()) &&
           "integral promotion error: operands result types must be the same");
  }

  return lhs->result_type_deref().GetCanonicalType();
}
